--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0-rc2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/libDaumMapAndroid.jar')
 }
