--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Always include this permission -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- Include only if your app benefits from precise location access. -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Always include this permission -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- Required only when requesting background location access on
      Android 10 (API level 29) and higher. -->
@@ -17,10 +15,10 @@
             android:fullBackupContent="@xml/backup_rules"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:usesCleartextTraffic="true"
             android:networkSecurityConfig="@xml/network_security_config"
             android:supportsRtl="true"
             android:theme="@style/Theme.SafeShare"
+            android:usesCleartextTraffic="true"
             tools:targetApi="31">
 
         <meta-data
@@ -30,7 +28,7 @@
         <activity
                 android:name=".ui.login.LoginActivity"
                 android:exported="true"
-                android:label="@string/title_activity_login" />
+                android:label="@string/app_name" />
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
